--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -49,4 +49,4 @@ jobs:
 
           [ -n "${{ secrets.READ_ONLY }}" ] && git show && exit 0
 
-          git push origin main
+          git push origin main1
