--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -41,7 +41,7 @@ jobs:
         run: |
           set -x
 
-          genpac --pac-proxy "SOCKS5 127.0.0.1:40000" --gfwlist-url - --gfwlist-local gfwlist/gfwlist.txt -o gfwlist.pac
+          genpac --pac-proxy "SOCKS5 127.0.0.1:40001" --gfwlist-url - --gfwlist-local gfwlist/gfwlist.txt -o gfwlist.pac
           sed '1,7d' -i gfwlist.pac
 
           git add gfwlist.pac
@@ -49,4 +49,4 @@ jobs:
 
           [ -n "${{ secrets.READ_ONLY }}" ] && git show && exit 0
 
-          git push origin main1
+          git push origin main
